--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -100,6 +100,7 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "framer-motion": "^10.12.4",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.3.1",
