--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -106,6 +106,7 @@
     "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
