--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.5",
+    "axios": "^1.4.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
