--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -99,6 +99,7 @@
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.4.0",
     "electron-debug": "^3.2.0",
+    "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
     "framer-motion": "^10.12.4",
@@ -107,6 +108,7 @@
     "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1"
   },
