--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -102,6 +102,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
@@ -110,7 +111,8 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
