--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -104,6 +104,7 @@
     "electron-updater": "^5.3.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
+    "node-powershell": "^5.0.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.3.1",
