--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -99,6 +99,7 @@
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.4.0",
     "electron-debug": "^3.2.0",
+    "electron-dl": "^3.5.0",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
