--- a/CyberPal-Desktop/package.json
+++ b/CyberPal-Desktop/package.json
@@ -103,6 +103,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "extract-zip": "^2.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
     "node-powershell": "^5.0.1",
